--- a/Project Resume 09122021/Deploy Interview/templates/index.htm
+++ b/Project Resume 09122021/Deploy Interview/templates/index.htm
@@ -11,7 +11,7 @@
                     <h5 class="card-title">Project Q&A</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="/qanda" class="btn btn-primary">Visit me</a>
                 </div>
             </div>
         </div>
@@ -22,18 +22,18 @@
                     <h5 class="card-title">Project Job Title</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="#" class="btn btn-primary">Visit me</a>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="https://source.unsplash.com/720x600/?quotation,answer" alt="Card image cap">
+                <img class="card-img-top" src="https://source.unsplash.com/720x600/?computer,screen" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Project Video Interview</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="#" class="btn btn-primary">Visit me</a>
                 </div>
             </div>
         </div>
