--- a/Project Resume 09122021/Deploy Interview/templates/index.htm
+++ b/Project Resume 09122021/Deploy Interview/templates/index.htm
@@ -22,7 +22,7 @@
                     <h5 class="card-title">Project Job Title</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's content.</p>
-                    <a href="#" class="btn btn-primary">Visit me</a>
+                    <a href="/jobtitle" class="btn btn-primary">Visit me</a>
                 </div>
             </div>
         </div>
@@ -33,7 +33,7 @@
                     <h5 class="card-title">Project Video Interview</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's content.</p>
-                    <a href="#" class="btn btn-primary">Visit me</a>
+                    <a href="/videointerview" class="btn btn-primary">Visit me</a>
                 </div>
             </div>
         </div>
