--- a/Project Resume 09122021/Deploy Interview/templates/index.htm
+++ b/Project Resume 09122021/Deploy Interview/templates/index.htm
@@ -1,12 +1,18 @@
 {% extends "base.htm" %}
 {% block content %}
 
+<!-- https://source.unsplash.com/720x600/?paper,pen -->
+<!-- https://source.unsplash.com/1080x720/?job,work,happy -->
+
+
+<!-- main body -->
+<br><br>
 <center>
-<div class="container">
+<div class="container d-flex justify-content-center align-items-center">
     <div class="row">
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="https://source.unsplash.com/720x600/?paper,pen" alt="Card image cap">
+                <img class="card-img-top" src="{{ url_for('static', filename='style/img/qanda.jpg' ) }}" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Project Q&A</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -17,7 +23,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="https://source.unsplash.com/720x600/?engineering,job" alt="Card image cap">
+                <img class="card-img-top" src="{{ url_for('static', filename='style/img/jobtitle.jpg' ) }}" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Project Job Title</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -28,7 +34,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="https://source.unsplash.com/720x600/?computer,screen" alt="Card image cap">
+                <img class="card-img-top" src="{{ url_for('static', filename='style/img/videointerview.jpg' ) }}" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Project Video Interview</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
