--- a/Project Resume 09122021/Deploy Interview/templates/base.htm
+++ b/Project Resume 09122021/Deploy Interview/templates/base.htm
@@ -29,7 +29,7 @@
 
 		<div class="container-fluid">
 
-			<a class="navbar-brand" href="#">
+			<a class="navbar-brand" href="/">
 				<img src="{{ url_for('static', filename='style/img/lo1.png' ) }}" alt="" width="100" height="44">
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -39,13 +39,13 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Q&A</a>
+						<a class="nav-link active" aria-current="page" href="/qanda">Q&A</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Job Title</a>
+						<a class="nav-link" href="/jobtitle">Job Title</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Video Interview</a>
+						<a class="nav-link" href="/videointerview">Video Interview</a>
 					</li>
 				</ul>
 			</div>
