--- a/Project Resume 09122021/Deploy Interview/templates/qanda.htm
+++ b/Project Resume 09122021/Deploy Interview/templates/qanda.htm
@@ -1,10 +1,111 @@
 {% extends "base.htm" %}
 {% block content %}
 
+<!-- https://source.unsplash.com/1080x240/?job,work,happy,love -->
+
 <center>
-<div class="container">
-Q & A
-</div>
+    <div class="container-fluid">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="{{ url_for('static', filename='style/img/qanda1.jpg' ) }}"
+                        alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="{{ url_for('static', filename='style/img/qanda2.jpg' ) }}"
+                        alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="{{ url_for('static', filename='style/img/qanda3.jpg' ) }}"
+                        alt="Third slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+    <br><br>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-8">
+                <!-- 
+                    Openness
+                    Conscientiousness
+                    Extroversion
+                    Agreeableness
+                    Neuroticism
+                 -->
+                <h1>Question answer test to find personality.</h1>
+                <form>
+                    <table class="table table-striped text-center">
+                        <thead>
+                          <tr>
+                            <th scope="col"></th>
+                            <th scope="col">First</th>
+                            <th scope="col" colspan="2">Last</th>
+                            <!-- <th scope="col">Handle</th> -->
+                          </tr>
+                        </thead>
+                        <thead>
+                            <tr>
+                              <th scope="col">#</th>
+                              <th scope="col">First</th>
+                              <th scope="col">Last</th>
+                              <th scope="col">Handle</th>
+                            </tr>
+                          </thead>
+                        <tbody>
+                          <tr>
+                            <th scope="row">1</th>
+                            <td>Mark</td>
+                            <td>Otto</td>
+                            <td>@mdo</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">2</th>
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">3</th>
+                            <td>Larry</td>
+                            <td>the Bird</td>
+                            <td>@twitter</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">4</th>
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">5</th>
+                            <td>Larry</td>
+                            <td>the Bird</td>
+                            <td>@twitter</td>
+                          </tr>
+                          
+                        </tbody>
+                      </table>
+                </form>
+            </div>
+            <div class="col-4">
+                2 of 3 (wider)
+            </div>
+        </div>
+    </div>
 
 </center>
 
