--- a/Project Resume 09122021/Deploy Interview/templates/qanda.htm
+++ b/Project Resume 09122021/Deploy Interview/templates/qanda.htm
@@ -38,7 +38,7 @@
     <br><br>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-8">
+            <div class="col-12">
                 <!-- 
                     Openness
                     Conscientiousness
@@ -49,61 +49,125 @@
                 <h1>Question answer test to find personality.</h1>
                 <form>
                     <table class="table table-striped text-center">
-                        <thead>
+                        <!-- <thead>
                           <tr>
                             <th scope="col"></th>
                             <th scope="col">First</th>
                             <th scope="col" colspan="2">Last</th>
-                            <!-- <th scope="col">Handle</th> -->
                           </tr>
-                        </thead>
+                        </thead> -->
                         <thead>
                             <tr>
                               <th scope="col">#</th>
-                              <th scope="col">First</th>
-                              <th scope="col">Last</th>
-                              <th scope="col">Handle</th>
+                              <th scope="col">Question's</th>
+                              <th scope="col">Disagree</th>
+                              <th scope="col">Partially Disagree</th>
+                              <th scope="col">Neutral</th>
+                              <th scope="col">Partially Agree</th>
+                              <th scope="col">Agree</th>
                             </tr>
                           </thead>
                         <tbody>
                           <tr>
                             <th scope="row">1</th>
+                            <td>I am the life of the party.</td>
+                            <td>Otto</td>
+                            <td>@mdo</td>
                             <td>Mark</td>
                             <td>Otto</td>
                             <td>@mdo</td>
                           </tr>
                           <tr>
                             <th scope="row">2</th>
+                            <td>I don't talk a lot.</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
                             <td>Jacob</td>
                             <td>Thornton</td>
                             <td>@fat</td>
                           </tr>
                           <tr>
                             <th scope="row">3</th>
+                            <td>I feel comfortable around people.</td>
+                            <td>the Bird</td>
+                            <td>@twitter</td>
                             <td>Larry</td>
                             <td>the Bird</td>
                             <td>@twitter</td>
                           </tr>
                           <tr>
                             <th scope="row">4</th>
+                            <td>I keep in the background.</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
                             <td>Jacob</td>
                             <td>Thornton</td>
                             <td>@fat</td>
                           </tr>
                           <tr>
                             <th scope="row">5</th>
+                            <td>I start conversations.</td>
+                            <td>the Bird</td>
+                            <td>@twitter</td>
                             <td>Larry</td>
                             <td>the Bird</td>
                             <td>@twitter</td>
                           </tr>
+                          <tr>
+                            <th scope="row">6</th>
+                            <td>I have little to say.</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">7</th>
+                            <td>I talk to a lot of different people at parties.</td>
+                            <td>the Bird</td>
+                            <td>@twitter</td>
+                            <td>Larry</td>
+                            <td>the Bird</td>
+                            <td>@twitter</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">8</th>
+                            <td>I don't like to draw attention to myself.</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">9</th>
+                            <td>I don't mind being the centre of attention.</td>
+                            <td>the Bird</td>
+                            <td>@twitter</td>
+                            <td>Larry</td>
+                            <td>the Bird</td>
+                            <td>@twitter</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">10</th>
+                            <td>I am quiet around strangers.</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
+                          </tr>
+
+                          
                           
                         </tbody>
                       </table>
                 </form>
             </div>
-            <div class="col-4">
+            <!-- <div class="col-2">
                 2 of 3 (wider)
-            </div>
+            </div> -->
         </div>
     </div>
 
