--- a/Project Resume 09122021/Deploy Interview/templates/qanda_result.htm
+++ b/Project Resume 09122021/Deploy Interview/templates/qanda_result.htm
@@ -34,8 +34,6 @@
   </div>
   <br><br>
 
-  Hello!!
-  
   <div class="container-fluid">
     <div class="row">
       <div class="col-2"></div>
@@ -48,6 +46,22 @@
       <div class="col-2"></div>
     </div>
   </div>
+  <br>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-2"></div>
+      <div class="col-4">
+        <div id="chartContainer" style="height: 470px; width: 100%;"></div>
+        <!--  style="height: 370px; width: 100%;" -->
+      </div>
+      <div class="col-4">
+        {{ EXT }}
+      </div>
+      <div class="col-2"></div>
+    </div>
+  </div>
+  <br><br><br>
+
 
 
 
