--- a/Project Resume 09122021/Deploy Interview/templates/qanda_result.htm
+++ b/Project Resume 09122021/Deploy Interview/templates/qanda_result.htm
@@ -41,7 +41,13 @@
         <div id="chart" class="chart"></div>
       </div>
       <div class="col-4">
-        {{ EXT }}
+        <ul style="list-style-type:circle;">
+          <li><u><strong>Extraversion</u> : </strong>The tendency to be sociable, talkative, and generally more outwardly oriented; the opposite represents introversion - the tendency to withdraw into oneself or to live in a relatively narrow circle of friends and acquaintances. </li>
+          <li><u><strong>Neuroticism</u> : </strong>A tendency toward anxiousness, rumination, and problem - focused thinking with increased susceptibility to stress. Neuroticism is a factor of psychological instability; psychologically stable individuals usually have a low neuroticism factor. </li>
+          <li><u><strong>Agreeableness</u> : </strong>Good ability in dealing with others, friendliness and diplomacy, seeking closeness with others. </li>
+          <li><u><strong>Conscientiousness</u> : </strong>The tendency to proceed systematically and according to plan, an eye for detail and a love of order, reliability and consistency, the need for predictability. </li>
+          <li><u><strong>Openness</u> : </strong>The willingness to open up to new information and experiences, tolerance and curiosity. </li>
+        </ul>  
       </div>
       <div class="col-2"></div>
     </div>
@@ -55,7 +61,11 @@
         <!--  style="height: 370px; width: 100%;" -->
       </div>
       <div class="col-4">
-        {{ EXT }}
+        <h1>Personality Based On Clustering Technique</h1>
+        <br>
+        <h3><u style="text-decoration-line: underline; text-decoration-style: wavy; text-decoration-color: red;">Result</u></h3>
+        <br>
+        <mark><strong>{{ result }}</strong></mark> 
       </div>
       <div class="col-2"></div>
     </div>
