--- a/Project Resume 09122021/Deploy Interview/templates/base.htm
+++ b/Project Resume 09122021/Deploy Interview/templates/base.htm
@@ -87,7 +87,7 @@
 				animationEnabled: true,
 				theme: "light2", // "light1", "light2", "dark1", "dark2"
 				title: {
-					text: "Personality score based on cluster"
+					text: "Personality based on cluster"
 				},
 				axisX: {
 					title: "Personality"
