--- a/Project Resume 09122021/Deploy Interview/templates/jobtitle.htm
+++ b/Project Resume 09122021/Deploy Interview/templates/jobtitle.htm
@@ -3,7 +3,37 @@
 
 <center>
 <div class="container">
-Job Title
+<h1>Resume Classification</h1>
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8">
+            <form action="/jobtitle" method="post" enctype="multipart/form-data">
+                <p>Upload your resume in (.pdf) formate :</p>
+                <input type="file" name="file" class="file">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+        <div class="col-2"></div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-4">
+            A
+            <br>
+            {{ text_data }}
+        </div>
+        <div class="col-4">
+            B
+            <br>
+            {{ rds }}
+        </div>
+        <div class="col-4">
+            C
+        </div>
+    </div>
 </div>
 
 </center>
