--- a/Project Resume 09122021/Deploy Interview/templates/base.htm
+++ b/Project Resume 09122021/Deploy Interview/templates/base.htm
@@ -14,7 +14,7 @@
 
 	<!-- <script src="https://kit.fontawesome.com/5130183192.js" crossorigin="anonymous"></script> -->
 
-	<link rel="icon" href="{{ url_for('static', filename='style/img/lo1.png' ) }}">
+	<link rel="icon" href="{{ url_for('static', filename='style/img/lo2.png' ) }}">
 
 	<!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/css/styles.css' ) }}"> -->
 
@@ -30,7 +30,7 @@
 		<div class="container-fluid">
 
 			<a class="navbar-brand" href="/">
-				<img src="{{ url_for('static', filename='style/img/lo1.png' ) }}" alt="" width="100" height="44">
+				<img src="{{ url_for('static', filename='style/img/lo2.png' ) }}" alt="" width="100" height="44">
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
 				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,6 +78,11 @@
 	<script type="text/javascript">
 		var graphs = {{ graphJSON | safe }};
 		Plotly.plot("chart", graphs, {});
+	</script>
+
+	<script type="text/javascript">
+		var graphs = {{ graphJSON1 | safe }};
+		Plotly.plot("chart1", graphs, {});
 	</script>
 
 	<script>
