--- a/Project Resume 09122021/Deploy Interview/templates/jobtitle.htm
+++ b/Project Resume 09122021/Deploy Interview/templates/jobtitle.htm
@@ -2,39 +2,43 @@
 {% block content %}
 
 <center>
-<div class="container">
-<h1>Resume Classification</h1>
-</div>
+    <div class="container">
+        <h1>Resume Classification</h1>
+    </div>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-2"></div>
-        <div class="col-8">
-            <form action="/jobtitle" method="post" enctype="multipart/form-data">
-                <p>Upload your resume in (.pdf) formate :</p>
-                <input type="file" name="file" class="file">
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <form action="/jobtitle" method="post" enctype="multipart/form-data">
+                    <p>Upload your resume in (.pdf) formate :</p>
+                    <input type="file" name="file" class="file">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+            <div class="col-2"></div>
         </div>
-        <div class="col-2"></div>
+        <br>
+
+        {% if flag %}
+        <div class="row">
+            <div class="col-6">
+                <h2>Role Score</h2>
+                <br>
+                <div id="chart1" class="chart"></div>
+            </div>
+            <div class="col-6">
+                <h2>Job Title</h2>
+                <br>
+                Your resume is match for <strong style="text-decoration-line: underline; text-decoration-style: wavy; text-decoration-color: red;">" {{ rds }} "</strong> position with {{ max_li }}% score. 
+                
+            </div>
+        </div>
     </div>
-    <br>
-    <div class="row">
-        <div class="col-4">
-            A
-            <br>
-            {{ text_data }}
-        </div>
-        <div class="col-4">
-            B
-            <br>
-            {{ rds }}
-        </div>
-        <div class="col-4">
-            C
-        </div>
+
+    {% endif %}
+
     </div>
-</div>
 
 </center>
 
