--- a/26 Suresh/Deployment/templates/base.htm
+++ b/26 Suresh/Deployment/templates/base.htm
@@ -14,11 +14,11 @@
 
 	<!-- <script src="https://kit.fontawesome.com/5130183192.js" crossorigin="anonymous"></script> -->
 
-	<link rel="icon" href="{{ url_for('static', filename='style/img/lo1.png' ) }}">
+	<link rel="icon" href="{{ url_for('static', filename='style/img/lo2.png' ) }}">
 
 	<!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/css/styles.css' ) }}"> -->
 
-	<title>InterView</title>
+	<title>Symptomo</title>
 
 </head>
 
