--- a/Project Resume 09122021/Deploy Interview/templates/videointerview.htm
+++ b/Project Resume 09122021/Deploy Interview/templates/videointerview.htm
@@ -2,9 +2,15 @@
 {% block content %}
 
 <center>
-<div class="container">
-Video Interview
-</div>
+    <div class="container">
+        Video Interview
+    </div>
+    <br>
+    <div>
+        <img style="width: 70%; height: 530px; background-attachment: fixed;" src="{{ url_for('videointerview') }}">
+    </div>
+    <br>
+
 
 </center>
 
