--- a/Mini Project Chronic_Kidney_Disease/Deployment/templates/home.html
+++ b/Mini Project Chronic_Kidney_Disease/Deployment/templates/home.html
@@ -163,7 +163,10 @@
 
     <div class="row">
         <div class="col">
-          
+            <center> 
+            <h1> Predicted Results : </h1>
+            <b> {{ msg }} </b>
+            </center>
         </div>
     </div>
 
