18052022 - Chronic_Kidney_Disease final
18052022 - Chronic_Kidney_Disease final

--- a/Mini Project Chronic_Kidney_Disease/Deployment/templates/index.html
+++ b/Mini Project Chronic_Kidney_Disease/Deployment/templates/index.html
@@ -18,7 +18,7 @@
 
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/css/main.css' ) }}">
 
-	<title>InterView</title>
+	<title>Chronic_Kidney_Disease</title>
 
 </head>
 
