--- a/Django/mysite1/templates/about.html
+++ b/Django/mysite1/templates/about.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock title %}
+{% block title %}About{% endblock title %}
 
 {% block body %}
 <div>
-    <h1>Home Page</h1>
+    <h1>About Page</h1>
     <div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, aperiam nesciunt! Neque exercitationem, laboriosam commodi nam fuga qui repellat veritatis cumque iure alias consequuntur aperiam ipsam, esse optio distinctio repudiandae.</p>
     </div>
