--- a/Django/mysite1/templates/base.html
+++ b/Django/mysite1/templates/base.html
@@ -5,8 +5,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title> {% block title %}{% endblock title %} || Demo Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
+    <style>
+        table, th, td {
+            border: 1px solid white;
+            border-collapse: collapse;
+            text-align: center;
+        }
+        th, td {
+            background-color: #dbebeb;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -27,8 +37,9 @@
                         <a class="nav-link" href="/about">About</a>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                <form class="d-flex" role="search" action="" method="POST">
+                    {% csrf_token %}
+                    <input class="form-control me-2" type="search" name="symbol" placeholder="Enter Your Symbol" aria-label="Search" required />
                     <button class="btn btn-outline-success" type="submit">
                         Search
                     </button>
