--- a/Django/mysite1/templates/base.html
+++ b/Django/mysite1/templates/base.html
@@ -39,8 +39,8 @@
                 </ul>
                 <form class="d-flex" role="search" action="" method="POST">
                     {% csrf_token %}
-                    <input class="form-control me-2" type="search" name="symbol" placeholder="Enter Your Symbol" aria-label="Search" required />
-                    <button class="btn btn-outline-success" type="submit">
+                    <input class="form-control me-2" type="search" name="symbol" id="symbolid" placeholder="Enter Your Symbol" aria-label="Search" required />
+                    <button class="btn btn-outline-success" id="search" type="submit">
                         Search
                     </button>
                 </form>
@@ -59,7 +59,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
-</body>
+        crossorigin="anonymous">
+    </script>
 
+    {% include 'ajax.html' %}
+
+</body>
 </html>
