--- a/Priyanka Deployment 1/templates/index_stud.htm
+++ b/Priyanka Deployment 1/templates/index_stud.htm
@@ -11,8 +11,19 @@
 <div class="container d-flex justify-content-center align-items-center">
     <div class="row">
         
-
-
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="{{ url_for('static', filename='style/img/qanda.jpg' ) }}" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Project Q&A</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="/qanda" class="btn btn-primary">Visit me</a>
+                </div>
+            </div>
+        </div>
+        
+        
         <div class="col">
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="{{ url_for('static', filename='style/img/jobtitle.jpg' ) }}" alt="Card image cap">
