--- a/Project POMO/data scraping/Project_Files/templates/base.html
+++ b/Project POMO/data scraping/Project_Files/templates/base.html
@@ -17,7 +17,10 @@
     <nav class="navbar navbar-dark bg-dark">
         <div class="container">
             <!-- Project Deployment Work -->
+            <!-- RO1 -->
             <a class="navbar-brand" href="/">Pomegranate Disease Prediction</a>
+            <!-- RO2 -->
+            <a class="navbar-brand" href="/WeatherBasedPomegranateDiseasePrediction">Weather Based Pomegranate Disease Prediction</a>
         </div>
     </nav>
     {% block content %}
