--- a/Suresh Interview Project/Part 1/templates/base.html
+++ b/Suresh Interview Project/Part 1/templates/base.html
@@ -18,7 +18,7 @@
 
 	<!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/css/styles.css' ) }}"> -->
 
-	<title>InterView</title>
+	<title>Project InterView</title>
 
 </head>
 
@@ -30,7 +30,8 @@
 		<div class="container-fluid">
 
 			<a class="navbar-brand" href="/">
-				<img src="{{ url_for('static', filename='style/img/lo2.png' ) }}" alt="" width="100" height="44">
+				<!-- <img src="{{ url_for('static', filename='style/img/lo2.png' ) }}" alt="" width="100" height="44"> -->
+				<h3>LOGO</h3>
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
 				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
