--- a/Suresh Interview Project/Part 1/templates/qanda_result.html
+++ b/Suresh Interview Project/Part 1/templates/qanda_result.html
@@ -66,6 +66,8 @@
         <h3><u style="text-decoration-line: underline; text-decoration-style: wavy; text-decoration-color: red;">Result</u></h3>
         <br>
         <mark><strong>{{ result }}</strong></mark> 
+        <br>
+        <mark><strong>Your personality type is : {{ my_personality[0] }}.</strong></mark>
       </div>
       <div class="col-2"></div>
     </div>
