--- a/Suresh Interview Project/Part 1/templates/home.html
+++ b/Suresh Interview Project/Part 1/templates/home.html
@@ -25,9 +25,8 @@
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="{{ url_for('static', filename='style/img/jobtitle.jpg' ) }}" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Project Job Title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <h5 class="card-title">Resume Classification</h5>
+                    <p class="card-text">Rank your resumes based on the required categories.</p>
                     <a href="/jobtitle" class="btn btn-primary">Visit me</a>
                 </div>
             </div>
@@ -37,7 +36,7 @@
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="{{ url_for('static', filename='style/img/videointerview.jpg' ) }}" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Project Video Interview</h5>
+                    <h5 class="card-title">Project Resume Similarity</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's content.</p>
                     <a href="/videointerview" class="btn btn-primary">Visit me</a>
