--- a/Suresh Interview Project/Project SQL-Injection/templates/base.html
+++ b/Suresh Interview Project/Project SQL-Injection/templates/base.html
@@ -20,7 +20,7 @@
 <body style="background-color: #e3f2fd;">
 
 	<!-- navbar -->
-	<nav class="navbar navbar-expand-lg navbar-light " style="background-color: #e3f2fd;">
+	<!-- <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #e3f2fd;">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="/">
 				<h3>LOGO</h3>
@@ -37,7 +37,42 @@
 				</ul>
 			</div>
 		</div>
-	</nav>
+	</nav> -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<div class="container-fluid">
+		  <a class="navbar-brand" href="#">LOGO</a>
+		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			  <li class="nav-item">
+				<a class="nav-link active" aria-current="page" href="#">Home</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">My Network</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">Jobs</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">Notifications</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">Work</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="/">Sign Out</a>
+			  </li>
+			  
+			</ul>
+			<form class="d-flex">
+			  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+			  <button class="btn btn-outline-success" type="submit">Search</button>
+			</form>
+		  </div>
+		</div>
+	  </nav>
 
 	{% block content %}{% endblock %}
 
