--- a/Suresh Interview Project/Project SQL-Injection/templates/home.html
+++ b/Suresh Interview Project/Project SQL-Injection/templates/home.html
@@ -13,26 +13,44 @@
         <div class="col">
             <div class="card">
                 <div class="card-header">
-                    Quote
+                    Lorem, ipsum
                 </div>
                 <div class="card-body">
                     <blockquote class="blockquote mb-0">
-                        <p>A well-known quote, contained in a blockquote element.</p>
-                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source
-                                Title</cite></footer>
+                        <p># Dolor sit</p>
+                        <p># Amet consectetur</p>
+                        <p># Adipisicing elit</p>
+                        <p># Animi recusandae</p>
                     </blockquote>
                 </div>
             </div>
             <br>
+
             <div class="card">
                 <div class="card-header">
-                    Quote
+                    Ipsum dolor
                 </div>
                 <div class="card-body">
                     <blockquote class="blockquote mb-0">
-                        <p>A well-known quote, contained in a blockquote element.</p>
-                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source
-                                Title</cite></footer>
+                        <p># Perspiciatis quaerat</p>
+                        <p># Cupiditate voluptates</p>
+                        <p># Ratione nisi</p>
+                        <p># Maxime asperiores</p>
+                    </blockquote>
+                </div>
+            </div>
+            <br>
+
+            <div class="card">
+                <div class="card-header">
+                    Quam cum
+                </div>
+                <div class="card-body">
+                    <blockquote class="blockquote mb-0">
+                        <p># Distinctio</p>
+                        <p># Rerum eveniet</p>
+                        <p># Laboriosam</p>
+                        <p># Dignissimos</p>
                     </blockquote>
                 </div>
             </div>
@@ -43,10 +61,13 @@
         <div class="col-6">
 
             <div class="card mb-3">
-                <img src="https://source.unsplash.com/1080x720/?economics,life" class="card-img-top" alt="economics,life">
+                <img src="https://source.unsplash.com/1080x720/?economics,money" class="card-img-top"
+                    alt="economics,money">
                 <div class="card-body">
                     <h5 class="card-title">Lorem ipsum dolor sit amet consectetur adipisicing. </h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque incidunt deleniti suscipit ut omnis culpa, cupiditate autem soluta tempore ratione ipsa doloribus magnam error atque commodi ducimus ipsum quaerat assumenda nihil earum? Porro, amet? </p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque incidunt
+                        deleniti suscipit ut omnis culpa, cupiditate autem soluta tempore ratione ipsa doloribus magnam
+                        error atque commodi ducimus ipsum quaerat assumenda nihil earum? Porro, amet? </p>
                     <p class="card-text"><small class="text-muted">Lorem ipsum dolor sit amet consectetur.</small></p>
                 </div>
             </div>
@@ -54,10 +75,13 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia laboriosam nihil quas vitae, impedit nemo iste pariatur dicta molestiae laborum dolor id doloribus! Sed rem illo, sequi voluptates aspernatur laborum iste blanditiis atque nam qui iusto accusamus ducimus ea.</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia laboriosam
+                        nihil quas vitae, impedit nemo iste pariatur dicta molestiae laborum dolor id doloribus! Sed rem
+                        illo, sequi voluptates aspernatur laborum iste blanditiis atque nam qui iusto accusamus ducimus
+                        ea.</p>
                     <p class="card-text"><small class="text-muted">Lorem ipsum dolor sit.</small></p>
                 </div>
-                <img src="https://source.unsplash.com/1080x720/?job,work" class="card-img-bottom" alt="job,work">
+                <img src="https://source.unsplash.com/1080x720/?job,graph" class="card-img-bottom" alt="job,graph">
             </div>
             <br>
 
@@ -67,7 +91,8 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Lorem ipsum dolor sit amet.</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis provident placeat odio.</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis provident
+                        placeat odio.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
                 <div class="card-footer text-muted">
@@ -76,12 +101,14 @@
             </div>
             <br>
 
-
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Lorem ipsum dolor sit amet.</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima facilis nisi voluptate iusto temporibus, ipsam cupiditate tempora ad cumque. Totam ipsum sed voluptatem magni ad.</p>
-                    <p class="card-text"><small class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit.</small></p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima facilis nisi
+                        voluptate iusto temporibus, ipsam cupiditate tempora ad cumque. Totam ipsum sed voluptatem magni
+                        ad.</p>
+                    <p class="card-text"><small class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit.</small></p>
                 </div>
                 <img src="https://source.unsplash.com/1080x720/?women,gold" class="card-img-bottom" alt="women,gold">
             </div>
@@ -90,21 +117,24 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Lorem ipsum dolor sit amet consectetur adipisicing.</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit consequatur suscipit nulla numquam praesentium adipisci totam esse, dignissimos recusandae voluptates, explicabo officiis consectetur nesciunt. Architecto voluptas omnis harum impedit assumenda.</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit consequatur
+                        suscipit nulla numquam praesentium adipisci totam esse, dignissimos recusandae voluptates,
+                        explicabo officiis consectetur nesciunt. Architecto voluptas omnis harum impedit assumenda.</p>
                     <p class="card-text"><small class="text-muted">Lorem ipsum dolor sit.</small></p>
                 </div>
-                <img src="https://source.unsplash.com/1080x720/?galaxy,planets" class="card-img-bottom" alt="galaxy,planets">
+                <img src="https://source.unsplash.com/1080x720/?green,planets" class="card-img-bottom"
+                    alt="green,planets">
             </div>
             <br>
 
-
-            
             <div class="row">
                 <div class="col-sm-6">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti voluptate assumenda obcaecati doloremque maxime at optio velit facilis deleniti dignissimos, ullam impedit doloribus nam sed saepe, commodi fugit cum sapiente minima! Magnam consequuntur at eaque harum aspernatur et quia accusamus facere aliquam veritatis! Corporis, obcaecati.
+                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti
+                                voluptate assumenda obcaecati doloremque maxime at optio velit facilis deleniti
+                                veritatis! Corporis, obcaecati.
                             </p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
@@ -114,7 +144,8 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Lorem ipsum dolor sit.</h5>
-                            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum illo veniam cum nesciunt officiis. Tenetur fugit corporis deleniti vitae.
+                            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum
+                                illo veniam cum nesciunt officiis. Tenetur fugit corporis deleniti vitae.
                             </p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
@@ -123,42 +154,44 @@
             </div>
             <br>
 
-
         </div>
 
         <div class="col">
-            <div class="card">
-                <div class="card-header">
-                    Featured
-                </div>
+
+            <div class="card" style="width: 18rem;">
+                <img src="https://source.unsplash.com/1080x720/?blue" class="card-img-top" alt="blue">
                 <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p class="card-text">Dolor sit amet, consectetur adipisicing elit. Sunt rem minima fugiat. Culpa, earum vel.</p>
+                </div>
+            </div>
+            <br>
+
+            <div class="card" style="width: 18rem;">
+                <img src="https://source.unsplash.com/1080x720/?sun,sea" class="card-img-top" alt="sun,sea">
+                <div class="card-body">
+                    <h5 class="card-title">Fuga voluptatum</h5>
+                    <p class="card-text">Sint vitae accusamus voluptatibus recusandae eum est harum ex ullam dolorum aliquid voluptatum, impedit modi doloribus nesciunt! Officiis deleniti quos.</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Dicta officiis</li>
+                    <li class="list-group-item">Tempora quas</li>
+                    <li class="list-group-item">Deserunt</li>
+                </ul>
+                <div class="card-body">
+                    <a href="#" class="card-link">Sapiente quis</a>
+                    <a href="#" class="card-link">Harum sint</a>
                 </div>
             </div>
             <br>
 
             <div class="card">
                 <div class="card-header">
-                    Featured
+                    Voluptatum
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <br>
-
-            <div class="card">
-                <div class="card-header">
-                    Featured
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Perspiciatis repudiandae</h5>
+                    <p class="card-text">Fugit deserunt consequatur quibusdam culpa tenetur sint harum est rerum repudiandae magnam. Iste harum, deleniti inventore, eligendi a placeat voluptatum perspiciatis repudiandae ab saepe molestias porro modi reiciendis ex magnam vero expedita non facere voluptates.</p>
+                    <a href="#" class="btn btn-primary">Ex magnam</a>
                 </div>
             </div>
             <br>
